intellij code cleanup